[package]
name = "rust-weasel"
version = "0.1.0"
authors = ["Brian Gillespie Brianjamesgillespie@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.6.5"
num = "0.2.0"

# The release profile, used for `cargo build --release` (and the dependencies
# for `cargo test --release`, including the local library or binary).
[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
panic = 'unwind'
incremental = false
overflow-checks = false

